# gassim

./: .gitignore  AGENT.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
docs/: build.md  design.md  plan.md  publish.md  python-api.md  supplement.md
docs/projects/: 001_semantic-and-api-changes.md
examples/: half_box_relax.py  isothermal_compression.py  piston_compression_collect.py
src/: error.rs  lib.rs
src/core/: event.rs  mod.rs  particle.rs  sim.rs
tests/: phase0.rs  phase1.rs  phase1_5.rs  phase2.rs
tests_py/: test_python_api.py
wheelhouse/: gassim-0.0.2-cp313-abi3-macosx_10_12_universal2.whl  gassim-0.0.2-cp313-abi3-macosx_10_12_x86_64.whl  gassim-0.0.2-cp313-abi3-macosx_11_0_arm64.whl
