[package]
name = "gassim"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gassim"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py313"] }
numpy = "0.26"
thiserror = "1.0"
ordered-float = "4"
rand = "0.8"
