[package]
name = "gassim"
version = "0.0.6"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gassim"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py313"] }
numpy = "0.26"
thiserror = "2.0.16"
ordered-float = "5.0.0"
rand = "0.9.2"
